Committing test run database connection Pom file added

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,15 +1,15 @@
-#spring.jap.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3306/sqlDemo
-#spring.datasource.username=root
-#spring.datasource.password=password
+spring.jap.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/sizweserver
+spring.datasource.username=root
+spring.datasource.password=
 
-spring:
-datasource:
-driverClassName: com.mysql.cj.jdbc.Driver
-url: jdbc:mysql://localhost:3306/sizweserver
-username: root
-password:
+#spring:
+#datasource:
+#driverClassName: com.mysql.cj.jdbc.Driver
+#url: jdbc:mysql://localhost:3306/sizweserver
+#username: root
+#password:
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 
